--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^5.0.1",
@@ -86,6 +87,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/supertest": "^6.0.3",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "@vitest/browser": "^3.2.3",
     "@vitest/coverage-v8": "^3.2.3",
