--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:integration": "vitest run --project=integration",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "playwright test",
+    "test:e2e": "playwright test; playwright show-report",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:install": "playwright install",
     "storybook": "storybook dev -p 6006",
